--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 00:05:02 2018</p>
+         Last Run: Thu Dec  6 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-11</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>28</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>30</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>32</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
+                 "57",
                  "58",
-                 "56"
+                 "57"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "30",
-                 "32"
+                 "33",
+                 "34",
+                 "35"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 00:05:02 2018</p>
+         Last Run: Thu Dec  6 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,23 +245,23 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>Clear</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>35</td>
+                        <td>WSW</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
@@ -270,14 +270,14 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>1</td>
-                        <td>-2</td>
-                        <td>1</td>
-                        <td>59</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,9 +304,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-3",
-                 "-2"
+                 "-4",
+                 "-2",
+                 "-1"
                ]
              },
              {
@@ -316,9 +316,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
-                 "0",
-                 "1"
+                 "-1",
+                 "1",
+                 "2"
                ]
              }
            ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "64",
-                 "59"
+                 "62",
+                 "57",
+                 "53"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "35",
+                 "26",
                  "42",
-                 "48"
+                 "49"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 00:05:02 2018</p>
+         Last Run: Thu Dec  6 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>77</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>66</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>5</td>
-                        <td>77</td>
+                        <td>-4</td>
+                        <td>-8</td>
+                        <td>4</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>51</td>
+                        <td>WSW</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>5</td>
-                        <td>81</td>
+                        <td>-5</td>
+                        <td>-10</td>
+                        <td>4</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>41</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,8 +520,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-7",
-                 "-8"
+                 "-8",
+                 "-10"
                ]
              },
              {
@@ -532,8 +532,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-3",
-                 "-4"
+                 "-4",
+                 "-5"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "4",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "77",
-                 "77",
-                 "81"
+                 "79",
+                 "82"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
-                 "51",
-                 "41"
+                 "64",
+                 "50",
+                 "39"
                ]
              }
            ]
