--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 01:05:02 2018</p>
+         Last Run: Thu Dec  6 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>33</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>34</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>35</td>
+                        <td>SW</td>
+                        <td>34</td>
                      </tr>
                   </tbody>
                </table>
@@ -173,7 +173,7 @@
                "data":[
                  "57",
                  "58",
-                 "57"
+                 "58"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "34",
-                 "35"
+                 "30",
+                 "32",
+                 "34"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 01:05:02 2018</p>
+         Last Run: Thu Dec  6 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -249,10 +249,10 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>26</td>
                      </tr>
                      <tr>
@@ -260,12 +260,12 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>57</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>42</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -275,9 +275,9 @@
                         <td>1</td>
                         <td>53</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>49</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "2",
+                 "1",
                  "1"
                ]
              },
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
+                 "61",
                  "57",
                  "53"
                ]
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "26",
-                 "42",
-                 "49"
+                 "30",
+                 "33"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 01:05:02 2018</p>
+         Last Run: Thu Dec  6 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>4</td>
-                        <td>77</td>
+                        <td>Partly Cloudy</td>
+                        <td>-4</td>
+                        <td>-8</td>
+                        <td>5</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>64</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>4</td>
-                        <td>79</td>
+                        <td>-5</td>
+                        <td>-9</td>
+                        <td>5</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>50</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-5</td>
+                        <td>-6</td>
                         <td>-10</td>
-                        <td>4</td>
-                        <td>82</td>
+                        <td>5</td>
+                        <td>83</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>39</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,8 +519,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
                  "-8",
+                 "-9",
                  "-10"
                ]
              },
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
                  "-4",
-                 "-5"
+                 "-5",
+                 "-6"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "5",
+                 "5",
+                 "5"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
                  "79",
-                 "82"
+                 "81",
+                 "83"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
-                 "50",
-                 "39"
+                 "42",
+                 "39",
+                 "37"
                ]
              }
            ]
