--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 03:05:03 2018</p>
+         Last Run: Thu Dec  6 04:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -49,7 +49,7 @@
                         <td>55</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>32</td>
                      </tr>
                      <tr>
@@ -57,7 +57,7 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>56</td>
                         <td>1</td>
                         <td>8</td>
@@ -162,7 +162,7 @@
                "data":[
                  "1",
                  "1",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
+                 "55",
                  "55",
                  "56"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 03:05:03 2018</p>
+         Last Run: Thu Dec  6 04:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -252,8 +252,8 @@
                         <td>61</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>27</td>
+                        <td>SW</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -273,7 +273,7 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -388,7 +388,7 @@
                "data":[
                  "61",
                  "56",
-                 "52"
+                 "53"
                ]
              },
              {
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
+                 "26",
                  "30",
                  "33"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 03:05:03 2018</p>
+         Last Run: Thu Dec  6 04:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>44</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -480,7 +480,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>41</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>38</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
+                 "79",
                  "79",
                  "82"
                ]
@@ -612,9 +612,224 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
-                 "41",
-                 "38"
+                 "43",
+                 "40",
+                 "37"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Thu Dec  6 04:05:21 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>09:00 PM</td>
+                        <td>Clear</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>3</td>
+                        <td>64</td>
+                        <td>0</td>
+                        <td>16</td>
+                        <td>W</td>
+                        <td>29</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>2</td>
+                        <td>65</td>
+                        <td>0</td>
+                        <td>16</td>
+                        <td>W</td>
+                        <td>24</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Clear</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>2</td>
+                        <td>66</td>
+                        <td>0</td>
+                        <td>16</td>
+                        <td>W</td>
+                        <td>21</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
+                  var data ={
+           "labels":[
+             "09:00 PM",
+             "10:00 PM",
+             "11:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-8",
+                 "-8",
+                 "-8"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-3",
+                 "-3",
+                 "-3"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
+                  var data ={
+           "labels":[
+             "09:00 PM",
+             "10:00 PM",
+             "11:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "3",
+                 "2",
+                 "2"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "64",
+                 "65",
+                 "66"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "29",
+                 "24",
+                 "21"
                ]
              }
            ]
