--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 04:05:21 2018</p>
+         Last Run: Thu Dec  6 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -30,19 +30,19 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-7</td>
                         <td>-11</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>30</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-5</td>
                         <td>-9</td>
                         <td>1</td>
@@ -50,19 +50,19 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>32</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>34</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "1",
                  "1",
-                 "0"
+                 "1"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
+                 "56",
                  "55",
                  "56"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "32",
-                 "34"
+                 "12",
+                 "13",
+                 "17"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 04:05:21 2018</p>
+         Last Run: Thu Dec  6 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,24 +248,24 @@
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>61</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>26</td>
+                        <td>WSW</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>30</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>33</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "1",
                  "1",
                  "1"
                ]
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "61",
-                 "56",
-                 "53"
+                 "57",
+                 "52"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
-                 "30",
-                 "33"
+                 "21",
+                 "27",
+                 "36"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 04:05:21 2018</p>
+         Last Run: Thu Dec  6 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -480,7 +480,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>37</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
+                 "78",
                  "79",
                  "82"
                ]
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "40",
-                 "37"
+                 "44",
+                 "41",
+                 "38"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 04:05:21 2018</p>
+         Last Run: Thu Dec  6 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -683,7 +683,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>29</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -695,19 +695,19 @@
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>24</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-3</td>
-                        <td>-8</td>
+                        <td>-4</td>
+                        <td>-10</td>
                         <td>2</td>
                         <td>66</td>
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -736,7 +736,7 @@
                "data":[
                  "-8",
                  "-8",
-                 "-8"
+                 "-10"
                ]
              },
              {
@@ -748,7 +748,7 @@
                "data":[
                  "-3",
                  "-3",
-                 "-3"
+                 "-4"
                ]
              }
            ]
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "24",
-                 "21"
+                 "28",
+                 "23",
+                 "20"
                ]
              }
            ]
