--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 11:05:02 2018</p>
+         Last Run: Thu Dec  6 12:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -49,19 +49,19 @@
                         <td>56</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>16</td>
+                        <td>WSW</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>1</td>
-                        <td>56</td>
+                        <td>0</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>37</td>
                      </tr>
                   </tbody>
@@ -162,7 +162,7 @@
                "data":[
                  "1",
                  "1",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
                  "56",
-                 "56"
+                 "56",
+                 "57"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "16",
+                 "13",
+                 "17",
                  "37"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 11:05:02 2018</p>
+         Last Run: Thu Dec  6 12:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,22 +246,22 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>1</td>
-                        <td>63</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>39</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>1</td>
-                        <td>-2</td>
-                        <td>1</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
@@ -273,11 +273,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>39</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,8 +304,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
-                 "-2",
+                 "-6",
+                 "-3",
                  "-1"
                ]
              },
@@ -316,8 +316,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
-                 "1",
+                 "-2",
+                 "0",
                  "2"
                ]
              }
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
-                 "59",
-                 "53"
+                 "65",
+                 "60",
+                 "54"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "39",
                  "38",
-                 "39"
+                 "38"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 11:05:02 2018</p>
+         Last Run: Thu Dec  6 12:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>13</td>
-                        <td>78</td>
+                        <td>10</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>57</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-6</td>
-                        <td>-10</td>
+                        <td>-5</td>
+                        <td>-9</td>
                         <td>6</td>
-                        <td>83</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "-8",
                  "-8",
-                 "-10"
+                 "-9"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "-4",
                  "-4",
-                 "-6"
+                 "-5"
                ]
              }
            ]
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
-                 "16",
+                 "10",
+                 "14",
                  "6"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
                  "79",
-                 "83"
+                 "79",
+                 "81"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "51",
-                 "49"
+                 "55",
+                 "50",
+                 "48"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 11:05:02 2018</p>
+         Last Run: Thu Dec  6 12:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,25 +676,25 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-8</td>
+                        <td>-2</td>
+                        <td>-7</td>
                         <td>3</td>
                         <td>67</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>W</td>
-                        <td>41</td>
+                        <td>18</td>
+                        <td>WNW</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
-                        <td>-8</td>
+                        <td>-9</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>W</td>
+                        <td>18</td>
+                        <td>WNW</td>
                         <td>34</td>
                      </tr>
                      <tr>
@@ -702,12 +702,12 @@
                         <td>Clear</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>3</td>
-                        <td>67</td>
+                        <td>2</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>W</td>
-                        <td>28</td>
+                        <td>WNW</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,8 +734,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
-                 "-8",
+                 "-7",
+                 "-9",
                  "-8"
                ]
              },
@@ -746,7 +746,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-3",
                  "-3"
                ]
@@ -807,7 +807,7 @@
                "data":[
                  "3",
                  "3",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -817,8 +817,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "67",
-                 "67",
-                 "67"
+                 "66",
+                 "66"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
+                 "42",
                  "34",
-                 "28"
+                 "27"
                ]
              }
            ]
