--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 14:05:03 2018</p>
+         Last Run: Thu Dec  6 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Clear</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>1</td>
-                        <td>56</td>
+                        <td>0</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>1</td>
-                        <td>56</td>
+                        <td>0</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>17</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>0</td>
-                        <td>57</td>
+                        <td>1</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>36</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
-                 "0"
+                 "0",
+                 "0",
+                 "1"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "56",
-                 "57"
+                 "55",
+                 "55",
+                 "55"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
-                 "17",
-                 "36"
+                 "5",
+                 "9",
+                 "29"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 14:05:03 2018</p>
+         Last Run: Thu Dec  6 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,13 +253,13 @@
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>35</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>1</td>
                         <td>57</td>
                         <td>1</td>
@@ -276,7 +276,7 @@
                         <td>51</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>36</td>
                      </tr>
                   </tbody>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-3",
+                 "-2",
                  "-1"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "0",
+                 "1",
                  "2"
                ]
              }
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "35",
+                 "36",
                  "36",
                  "36"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 14:05:03 2018</p>
+         Last Run: Thu Dec  6 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,9 +461,9 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-5</td>
-                        <td>-9</td>
-                        <td>12</td>
+                        <td>-6</td>
+                        <td>-10</td>
+                        <td>11</td>
                         <td>83</td>
                         <td>0</td>
                         <td>10</td>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
+                 "-10",
                  "-10",
                  "-10"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-5",
+                 "-6",
                  "-6",
                  "-6"
                ]
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
+                 "11",
                  "14",
                  "5"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 14:05:03 2018</p>
+         Last Run: Thu Dec  6 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -683,7 +683,7 @@
                         <td>0</td>
                         <td>18</td>
                         <td>WNW</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,23 +691,23 @@
                         <td>-3</td>
                         <td>-9</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>18</td>
                         <td>WNW</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-4</td>
-                        <td>-10</td>
+                        <td>-3</td>
+                        <td>-8</td>
                         <td>2</td>
                         <td>65</td>
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>66</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -736,7 +736,7 @@
                "data":[
                  "-9",
                  "-9",
-                 "-10"
+                 "-8"
                ]
              },
              {
@@ -748,7 +748,7 @@
                "data":[
                  "-3",
                  "-3",
-                 "-4"
+                 "-3"
                ]
              }
            ]
@@ -817,7 +817,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "66",
-                 "64",
+                 "65",
                  "65"
                ]
              },
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "68",
-                 "66"
+                 "66",
+                 "69",
+                 "67"
                ]
              }
            ]
